# ifile

./: README.md  pyproject.toml
src/ifile_reader/: __init__.py  config.py
src/ifile_reader/api/: __init__.py  ifile.py  ifile.pyi
src/ifile_reader/core/corrections/: offset.py
src/ifile_reader/core/domain/: axis.py  channel.py  dependencies.py  parameter.py
src/ifile_reader/core/infrastructure/: catool.py  ifile_reader.py
