[tool.poetry]
name = "ifile-reader"
version = "0.1.2"
description = "Python reader for AVL IFILE using Catool backend"
authors = ["william-using-git <william.using.github@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.9.2"
pandas = "^2.3.3"
numpy = "^2.3.5"
scipy = "^1.17.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
